Updated repo name to saucedemo automation. Added readme info.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saucelabs-automation",
+  "name": "saucedemo-automation",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
